# SPAM-EMAIL-DETECTION-MODEL

./: README.md  app.py  pyproject.toml  requirements.txt  spam_model.pkl  tfidf_vectorizer.pkl  train.py
